exports[`NavSchema Component should render classes and indexes for root db 1`] = `
<CustomNav
  groups={
    Array [
      Object {
        "isExpanded": true,
        "links": Array [
          Object {
            "key": "create-database",
            "name": "Create Database",
            "url": "/db/databases",
          },
          Object {
            "key": "manage-keys",
            "name": "Manage Keys",
            "url": "/db/keys",
          },
        ],
        "name": "Options",
      },
      Object {
        "isExpanded": true,
        "links": Array [
          Object {
            "key": "/db/classes/a-class",
            "name": "a-class",
            "url": "/db/classes/a-class",
          },
        ],
        "name": "Classes",
      },
      Object {
        "isExpanded": true,
        "links": Array [
          Object {
            "key": "/db/indexes/a-index",
            "name": "a-index",
            "url": "/db/indexes/a-index",
          },
        ],
        "name": "Indexes",
      },
    ]
  }
  onLinkClick={[Function]}
  onRenderLink={[Function]} />
`;

exports[`NavSchema Component should render classes and indexes for sub db 1`] = `
<CustomNav
  groups={
    Array [
      Object {
        "isExpanded": true,
        "links": Array [
          Object {
            "key": "create-database",
            "name": "Create Database",
            "url": "/db/subdb/databases",
          },
          Object {
            "key": "create-class",
            "name": "Create Class",
            "url": "/db/subdb/classes",
          },
          Object {
            "key": "create-index",
            "name": "Create Index",
            "url": "/db/subdb/indexes",
          },
          Object {
            "key": "manage-keys",
            "name": "Manage Keys",
            "url": "/db/subdb/keys",
          },
        ],
        "name": "Options",
      },
      Object {
        "isExpanded": true,
        "links": Array [],
        "name": "Classes",
      },
      Object {
        "isExpanded": true,
        "links": Array [],
        "name": "Indexes",
      },
    ]
  }
  onLinkClick={[Function]}
  onRenderLink={[Function]} />
`;

exports[`NavSchema Component should render options for root using a server key 1`] = `
<CustomNav
  groups={
    Array [
      Object {
        "isExpanded": true,
        "links": Array [
          Object {
            "key": "create-class",
            "name": "Create Class",
            "url": "/db/classes",
          },
          Object {
            "key": "create-index",
            "name": "Create Index",
            "url": "/db/indexes",
          },
        ],
        "name": "Options",
      },
      Object {
        "isExpanded": true,
        "links": Array [
          Object {
            "key": "/db/classes/a-class",
            "name": "a-class",
            "url": "/db/classes/a-class",
          },
        ],
        "name": "Classes",
      },
      Object {
        "isExpanded": true,
        "links": Array [
          Object {
            "key": "/db/indexes/a-index",
            "name": "a-index",
            "url": "/db/indexes/a-index",
          },
        ],
        "name": "Indexes",
      },
    ]
  }
  onLinkClick={[Function]}
  onRenderLink={[Function]} />
`;

exports[`NavSchema Component should render options for sub using a server key 1`] = `
<CustomNav
  groups={
    Array [
      Object {
        "isExpanded": true,
        "links": Array [
          Object {
            "key": "create-class",
            "name": "Create Class",
            "url": "/db/subdb/classes",
          },
          Object {
            "key": "create-index",
            "name": "Create Index",
            "url": "/db/subdb/indexes",
          },
        ],
        "name": "Options",
      },
      Object {
        "isExpanded": true,
        "links": Array [],
        "name": "Classes",
      },
      Object {
        "isExpanded": true,
        "links": Array [],
        "name": "Indexes",
      },
    ]
  }
  onLinkClick={[Function]}
  onRenderLink={[Function]} />
`;
